Fix bugs related to mana abilities being excluded